#368: use configuration parameter to adjust thread handling in SMTP server